--- a/content/filestructure.yml
+++ b/content/filestructure.yml
@@ -2,7 +2,7 @@
   file_child: app.js
   file_child: index.js
   file_child: index.css
-- file: components
+- child_folder: components
   file_child: data/data.js
   file_child: map/searchList.js
   file_child: map/searchChildList.js
